[package]
name = "wba-adminlist"
version = "0.1.1"
authors = ["Riku <riku@won.dev"]
edition = "2018"
description = "Smart Contract to manage a set of admins for the Web3 Builders Alliance"
license = "Apache-2.0"
repository = ""
homepage = ""
documentation = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cw0 = "0.10.3"
cw1 = "0.14.0"
cw2 = "0.14.0"
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
cw-storage-plus = "0.14.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
nft = { path = "../nft", version = "0.1.0" }

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.14.0"
derivative = "2"
